--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,5 @@
 {
+  "jsxBracketSameLine": false,
   "printWidth": 120,
   "tabWidth": 2,
   "useTabs": false,
@@ -7,5 +8,18 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "bracketSameLine": true,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "plugins": [
+    "@ianvs/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ],
+  "endOfLine": "lf",
+  "tailwindFunctions": [
+    "cva",
+    "classNames",
+    "cn"
+  ],
+  "tailwindAttributes": [
+    "classNames"
+  ]
 }
