--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "lint": "eslint . --max-warnings 0",
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
@@ -23,14 +24,20 @@
     "spotify-web-api-js": "^1.5.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@react-router/dev": "^7.2.0",
     "@tailwindcss/vite": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.9",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.25.0",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
   },
