--- a/.prettierrc
+++ b/.prettierrc
@@ -9,17 +9,14 @@
   "bracketSpacing": true,
   "bracketSameLine": true,
   "arrowParens": "always",
-  "plugins": [
-    "@ianvs/prettier-plugin-sort-imports",
-    "prettier-plugin-tailwindcss"
-  ],
+  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
   "endOfLine": "lf",
-  "tailwindFunctions": [
-    "cva",
-    "classNames",
-    "cn"
-  ],
-  "tailwindAttributes": [
-    "classNames"
-  ]
+  "tailwindFunctions": ["cva", "classNames", "cn"],
+  "tailwindAttributes": ["classNames"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "importOrderBuiltinModulesToTop": true,
+  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
+  "importOrderMergeDuplicateImports": true,
+  "importOrderCombineTypeAndValueImports": true
 }
