--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc",
-    "ttt": "tailwindcss init -p"
+    "typecheck": "react-router typegen && tsc"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.6",
+    "@mui/styled-engine-sc": "^6.4.6",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
     "@statsfm/spotify.js": "^1.13.0",
@@ -22,7 +26,8 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
-    "spotify-web-api-js": "^1.5.2"
+    "spotify-web-api-js": "^1.5.2",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -33,14 +38,18 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "@types/tailwindcss": "^3.1.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.21.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-router-devtools": "^1.1.0",
-    "tailwindcss": "^4.0.9",
+    "tailwindcss": "3",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.25.0",
     "vite": "^5.4.11",
