--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "spotify-web-api-js": "^1.5.2",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "swr": "^2.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
