--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,21 +6,21 @@
   "editor.formatOnSave": true,
   "editor.formatOnType": false,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.codeActionsOnSave": [
-    "source.organizeImports",
-    "source.fixAll.eslint"
-  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll": "always",
+    "source.fixAll.eslint": "always",
+    "source.fixAll.markdownlint": "always",
+    "source.fixAll.sortJSON": "never",
+    "source.generate.finalModifiers": "always",
+    "source.organizeImports": "always",
+    "source.sortMembers": "always"
+  },
   "editor.inlineSuggest.enabled": true,
   "editor.linkedEditing": true,
 
   // TypeScript & JavaScript
   "typescript.tsdk": "node_modules/typescript/lib",
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact"
-  ],
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
 
   // Tailwind CSS
   "tailwindCSS.classAttributes": ["class", "className"],
@@ -35,7 +35,7 @@
   ],
   "tailwindCSS.files.exclude": ["**/.git/**", "**/node_modules/**"],
 
-  "eslint.workingDirectories": [{ "mode":"auto" }],
+  "eslint.workingDirectories": [{ "mode": "auto" }],
 
   // File & Workspace
   "files.autoSave": "onFocusChange",
