Refactor AuthProvider to simplify user data fetching logic and improve token management; update SWR fetcher to include logging for better debugging.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,8 @@
   "files.autoSave": "onFocusChange",
   "files.associations": {
     "*.css": "postcss"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "ms-vsliveshare.vsliveshare"
   }
 }
