Refactor code style and configuration: update Prettier and ESLint settings, clean up Home component layout, and improve AuthProvider logic for better readability and maintainability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
     "source.fixAll.markdownlint": "always",
     "source.fixAll.sortJSON": "never",
     "source.generate.finalModifiers": "always",
-    "source.organizeImports": "always",
+    "source.organizeImports": "never",
     "source.sortMembers": "always"
   },
   "editor.inlineSuggest.enabled": true,
@@ -41,8 +41,5 @@
   "files.autoSave": "onFocusChange",
   "files.associations": {
     "*.css": "postcss"
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "ms-vsliveshare.vsliveshare"
   }
 }
