--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.4.6",
     "@statsfm/spotify.js": "^1.13.0",
     "next": "15.2.1",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "spotify-web-api-js": "^1.5.2",
