--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.6",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "@statsfm/spotify.js": "^1.13.0",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
